--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,101 +1,136 @@
-name: xxx
+name: MacOS VNC Setup
 
 on:
   workflow_dispatch:
 
 jobs:
   secure-vnc:
-    runs-on: macos-16
+    runs-on: macos-14  # atau macos-latest
     timeout-minutes: 360
 
     steps:
-
-      # 1. Enable VNC
-      - name: Generate Password and Enable VNC
+      # 1. Enable VNC dengan konfigurasi yang lebih komprehensif
+      - name: Enable VNC Service
         run: |
           VNC_PASS=$(openssl rand -base64 12)
           echo "VNC_PASSWORD=$VNC_PASS" >> $GITHUB_ENV
-          echo "Password VNC: $VNC_PASS"
-
+          
+          # Enable Remote Management dengan VNC
           sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
             -activate \
-            -configure \
-            -access -on \
+            -configure -access -on \
             -clientopts -setvnclegacy -vnclegacy yes \
             -clientopts -setvncpw -vncpw "$VNC_PASS" \
             -restart -agent \
-            -privs -all -users runner
+            -privs -all
 
-
-      # 2. FIX BLACK SCREEN (AMAN): Force GUI by opening apps
-      - name: Start GUI Desktop Environment (Safe Mode)
+      # 2. Setup GUI Environment
+      - name: Setup GUI Environment
         run: |
-          echo "Starting macOS GUI apps to activate WindowServer..."
+          # Enable auto-login untuk user runner
+          sudo defaults write /Library/Preferences/com.apple.loginwindow autoLoginUser -string "runner"
+          
+          # Disable screen saver dan sleep
+          sudo -u runner defaults -currentHost write com.apple.screensaver idleTime 0
+          sudo systemsetup -setdisplaysleep Never -setcomputersleep Never -setharddisksleep Never
 
-          sudo -u runner open -a Finder || true
-          sudo -u runner open -a Safari || true
-          sudo -u runner open -a TextEdit || true
-          sudo -u runner open -a Terminal || true
+          # Launch GUI Services
+          sudo launchctl load -w /System/Library/LaunchDaemons/com.apple.windowserver.plist 2>/dev/null || true
 
+      # 3. Start GUI Session
+      - name: Start GUI Session
+        run: |
+          # Kill existing processes yang mungkin hang
+          sudo pkill -f "WindowServer" || true
+          sudo pkill -f "loginwindow" || true
+          
+          # Start loginwindow process
+          sudo launchctl load /System/Library/LaunchDaemons/com.apple.loginwindow.plist
+          
+          # Tunggu GUI ready
+          sleep 10
+          
+          # Launch essential GUI components
+          sudo -u runner launchctl load /System/Library/LaunchAgents/com.apple.Finder.plist 2>/dev/null || true
+          
+          # Force launch Finder
+          sudo -u runner osascript -e 'tell application "Finder" to activate' 2>/dev/null || true
+          
           echo "Waiting for GUI to initialize..."
-          sleep 8
+          sleep 15
 
-
-      # 3. Reset screen capture permissions
-      - name: Reset Screen Permissions
+      # 4. Reset permissions dengan approach yang lebih baik
+      - name: Reset Privacy Permissions
         run: |
-          sudo tccutil reset ScreenCapture || true
-          sudo tccutil reset ScreenRecording || true
-          sudo tccutil reset Accessibility || true
+          # Reset permissions untuk user runner
+          sudo tccutil reset All runner
+          sudo tccutil reset ScreenCapture
+          sudo tccutil reset ScreenRecording
+          sudo tccutil reset Accessibility
+          
+          # Grant permissions ke essential apps
+          SQL="INSERT OR REPLACE INTO access VALUES('kTCCServiceScreenCapture','com.apple.Terminal',0,1,1,NULL,NULL,NULL,'UNUSED',NULL,0,1541440109);"
+          sudo sqlite3 "/Library/Application Support/com.apple.TCC/TCC.db" "$SQL" 2>/dev/null || true
 
-          sudo -u runner open -a Finder || true
-          sleep 4
-
-
-      # 4. Install Tailscale
-      - name: Install Tailscale via Homebrew
-        run: brew install tailscale
-
-
-      # 5. Connect Tailscale
-      - name: Establish Tailscale Connection
+      # 5. Install Tailscale
+      - name: Install Tailscale
         run: |
-          TS_BIN=$(which tailscale)
-          echo "Tailscale binary: $TS_BIN"
+          brew update
+          brew install tailscale
 
+      # 6. Connect Tailscale
+      - name: Connect Tailscale
+        run: |
           sudo brew services start tailscale
-          sleep 4
-
-          sudo $TS_BIN up \
+          sleep 5
+          
+          sudo tailscale up \
             --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
             --hostname=gh-runner-macos-$GITHUB_RUN_ID
-
-          sleep 4
-
-          tsIP="$($TS_BIN ip -4)"
+            
+          sleep 5
+          tsIP=$(tailscale ip -4)
           echo "TAILSCALE_IP=$tsIP" >> $GITHUB_ENV
           echo "Tailscale IP: $tsIP"
 
-
-      # 6. Test port VNC
-      - name: Verify VNC
-        run: nc -z -v $TAILSCALE_IP 5900
-
-
-      # 7. Keep connection open
-      - name: Maintain Connection
+      # 7. Verify VNC Connection
+      - name: Verify VNC Service
         run: |
-          TS_BIN=$(which tailscale)
+          # Check VNC status
+          sudo netstat -an | grep 5900 || echo "Checking VNC port..."
+          
+          # Alternative check
+          sudo launchctl list | grep -i vnc || echo "Checking VNC service..."
+          
+          # Test connection
+          nc -z -v localhost 5900 && echo "VNC is running" || echo "VNC check failed"
 
-          echo "===== VNC ACCESS ====="
+      # 8. Final GUI Preparation
+      - name: Final GUI Setup
+        run: |
+          # Ensure user permissions
+          sudo dscl . -create /Users/runner PrimaryGroupID 80
+          
+          # Final GUI apps launch
+          sudo -u runner open -a Finder 2>/dev/null || true
+          sudo -u runner open -a SystemPreferences 2>/dev/null || true
+          
+          # Set resolution (optional)
+          sudo system_profiler SPDisplaysDataType | head -20 || true
+
+      # 9. Maintain Connection
+      - name: Keep Alive
+        run: |
+          echo "=== VNC Connection Details ==="
           echo "IP: $TAILSCALE_IP"
           echo "Port: 5900"
           echo "User: runner"
           echo "Password: $VNC_PASSWORD"
-          echo "======================"
-
+          echo "=============================="
+          
+          # Keep-alive loop
           while true; do
-            echo "[$(date)] VNC running..."
-            $TS_BIN status
-            sleep 300
+            echo "[$(date)] VNC Session Active - IP: $TAILSCALE_IP"
+            tailscale status
+            sleep 60
           done
