--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,60 +1,105 @@
-name: macOS Headless VNC
+name: MacOS Secure VNC
 
 on:
   workflow_dispatch:
 
 jobs:
-  vnc:
+  secure-vnc:
     runs-on: macos-14
+    timeout-minutes: 360
 
     steps:
-      - name: Install XQuartz
+      # 1. Enable VNC tanpa mengganggu proses existing
+      - name: Enable VNC Service
         run: |
-          curl -L -o XQuartz.pkg https://github.com/XQuartz/XQuartz/releases/download/XQuartz-2.8.5/XQuartz-2.8.5.pkg
-          sudo installer -pkg XQuartz.pkg -target /
+          VNC_PASS=$(openssl rand -base64 12)
+          echo "VNC_PASSWORD=$VNC_PASS" >> $GITHUB_ENV
+          echo "VNC Password: $VNC_PASS"
+          
+          # Enable VNC without restarting critical services
+          sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
+            -activate \
+            -configure -access -on \
+            -clientopts -setvnclegacy -vnclegacy yes \
+            -clientopts -setvncpw -vncpw "$VNC_PASS" \
+            -restart -agent \
+            -privs -all
 
-      - name: Install TigerVNC
+      # 2. Safe GUI activation tanpa kill processes
+      - name: Safe GUI Activation
         run: |
-          brew install tigervnc
-          echo "Pilih password random"
-          PASS=$(openssl rand -base64 12)
-          echo "$PASS" | vncpasswd -f > ~/.vnc/passwd
-          chmod 600 ~/.vnc/passwd
-          echo "VNC_PASS=$PASS" >> $GITHUB_ENV
+          # Only disable sleep/screensaver
+          sudo systemsetup -setdisplaysleep Never || true
+          sudo systemsetup -setcomputersleep Never || true
+          
+          # Start GUI apps safely
+          for i in {1..3}; do
+            echo "Attempt $i to start GUI..."
+            sudo -u runner open -a Finder 2>/dev/null || true
+            sudo -u runner open -a Safari 2>/dev/null || true
+            sleep 5
+          done
+          
+          echo "GUI activation completed"
 
-      - name: Start Fake X11 Desktop (Xvnc)
-        run: |
-          mkdir -p ~/.vnc
-          cat <<EOF > ~/.vnc/xstartup
-#!/bin/sh
-export PATH=/opt/X11/bin:$PATH
-xrdb $HOME/.Xresources
-xclock &
-xterm &
-EOF
-          chmod +x ~/.vnc/xstartup
-
-          echo "Start VNC server..."
-          /opt/homebrew/bin/Xvnc :0 -geometry 1440x900 -localhost no \
-              -rfbauth ~/.vnc/passwd \
-              -pn -listen tcp &
-
-          sleep 3
-          echo "VNC server started"
-
+      # 3. Install Tailscale
       - name: Install Tailscale
         run: |
-          brew install tailscale
-          sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
-            --hostname=macos-vnc-$GITHUB_RUN_ID
+          which tailscale || brew install tailscale
 
-          echo "TAILSCALE_IP=$(tailscale ip -4)" >> $GITHUB_ENV
-
-      - name: Keep Alive
+      # 4. Connect Tailscale
+      - name: Connect Tailscale
         run: |
-          echo "===== CONNECT WITH VNC ====="
+          sudo brew services start tailscale
+          sleep 10
+          
+          # Connect Tailscale
+          sudo tailscale up \
+            --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
+            --hostname=gh-runner-macos-$GITHUB_RUN_ID \
+            --accept-routes=true
+          
+          sleep 5
+          tsIP=$(tailscale ip -4)
+          echo "TAILSCALE_IP=$tsIP" >> $GITHUB_ENV
+          echo "Tailscale IP: $tsIP"
+
+      # 5. Verify VNC
+      - name: Verify VNC Connection
+        run: |
+          echo "Checking VNC status..."
+          # Check if VNC port is open
+          nc -z -v localhost 5900 && echo "VNC Port 5900: OPEN" || echo "VNC Port 5900: CLOSED"
+          
+          # Check ARD Agent status
+          sudo launchctl list | grep -i ard && echo "ARD Agent: RUNNING" || echo "ARD Agent: NOT FOUND"
+          
+          # Check screen sharing status
+          sudo netstat -an | grep 5900 || echo "No VNC listener found"
+
+      # 6. Keep Alive dengan health check
+      - name: Maintain VNC Connection
+        run: |
+          echo "=== VNC ACCESS INFORMATION ==="
           echo "IP: $TAILSCALE_IP"
-          echo "PORT: 5900"
-          echo "Password: $VNC_PASS"
-          echo "============================"
-          while true; do sleep 60; done
+          echo "Port: 5900" 
+          echo "User: runner"
+          echo "Password: $VNC_PASSWORD"
+          echo "=============================="
+          
+          # Health check loop
+          counter=0
+          while [ $counter -lt 216 ]; do  # 360 minutes = 216 * 100 seconds
+            echo "[$(date)] VNC Session Active - Duration: $((counter * 100)) seconds"
+            
+            # Check Tailscale status
+            tailscale status || echo "Tailscale not responding"
+            
+            # Check VNC periodically
+            if [ $((counter % 6)) -eq 0 ]; then  # Every ~10 minutes
+              nc -z -w 1 localhost 5900 && echo "VNC: HEALTHY" || echo "VNC: UNHEALTHY"
+            fi
+            
+            sleep 100
+            counter=$((counter + 1))
+          done
