--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   build:
     name: MacRDP
-    runs-on: macos-12
+    runs-on: macos-latest
     
     steps:                 
     - name: Enabling Remote Access
